<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="de.nicograef.sudokutrainer.MainActivity"
    android:alignmentMode="alignBounds"
    android:orientation="horizontal" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/primary_text_dark"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabChallenge"
        app:srcCompat="@drawable/ic_star_black_24dp"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70" />

        <Button
            android:text="@string/btnNewText"
            android:id="@+id/btnNew"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:alpha="0.15" />

        <Button
            android:text="@string/btnLoadText"
            android:id="@+id/btnLoad"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:alpha="0.15" />

        <Button
            android:text="@string/btnHighscoreText"
            android:id="@+id/btnHighscore"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70" />
    </LinearLayout>




</android.support.constraint.ConstraintLayout>
