<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="de.nicograef.sudokutrainer.LevelActivity"
    android:alignmentMode="alignBounds"
    android:orientation="horizontal" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50" />

        <Button
            android:text="@string/lvlEasy"
            android:id="@+id/btnEasy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:alpha="0.15" />

        <Button
            android:text="@string/lvlMedium"
            android:id="@+id/btnMedium"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="20"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:alpha="0.15" />

        <Button
            android:text="@string/lvlHard"
            android:id="@+id/btnHard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="20"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
